<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_half_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="normal"/>

    <Button
        android:id="@+id/popular_movies"
        style="@style/defaultButtonStyle"
        android:text="@string/popular_movies"/>

    <Button
        android:id="@+id/scores_app"
        style="@style/defaultButtonStyle"
        android:text="@string/scores_app"/>

    <Button
        android:id="@+id/library_app"
        style="@style/defaultButtonStyle"
        android:text="@string/library_app"/>

    <Button
        android:id="@+id/build_it_bigger"
        style="@style/defaultButtonStyle"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/xyz_reader"
        style="@style/defaultButtonStyle"
        android:text="@string/xyz_reader"/>

    <Button
        android:id="@+id/capstone"
        style="@style/defaultButtonStyle"
        android:text="@string/capstone"/>


</LinearLayout>
